--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -19,7 +19,7 @@
             <a href="/dashboard/comments">Comments</a>
         </li>
         <li class="list-group-item list-group-item-action side-link py-3">
-            <a href="/dashboard/change-password">Change Password</a>
+            <a href="/auth/change-password">Change Password</a>
         </li>
         <li class="list-group-item list-group-item-action side-link py-3">
             <a href="/auth/logout">Logout</a>
