--- a/views/pages/dashboard/dashboard.ejs
+++ b/views/pages/dashboard/dashboard.ejs
@@ -8,10 +8,69 @@
 
             <div class="col-md-10">
                 <div class="row">
-                    <div class="col-md-8 offset-md-2">
-                        <h1 class="text-center display-4">My Dashboard</h1>
+                    <div class="col-md-8 offset-md-2 my-5">
+
+                        <div class="row">
+                            <h5 class="text-primary">My recently created posts</h5>
+
+                            <% if (posts.length===0) { %>
+                                <div class="text-center text-muted">
+                                    <p>There is no posts available</p>
+                                </div>
+                                <% } else { %>
+                                    <% for (let post of posts) { %>
+                                        <div class="card col-sm-3 m-2">
+                                            <% if (post.thumbnail) { %>
+                                                <img src="<%= post.thumbnail %>" alt="<%= post.title %>"
+                                                    class="card-img-top mt-3">
+                                                <% } %>
+                                                    <div class="card-body p-0">
+                                                        <a href="/explorer/<%= post._id %>" class="text-dark card-link">
+                                                            <p class="my-2">
+                                                                <%= post.title %>
+                                                            </p>
+                                                        </a>
+                                                    </div>
+                                        </div>
+                                        <% } %>
+                                            <% } %>
+                        </div>
+
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-md-8 offset-md-2 my-5">
+
+                        <div class="row">
+                            <h5 class="text-primary">My recently created bookmarks</h5>
+
+                            <% if (posts.length===0) { %>
+                                <div class="text-center text-muted">
+                                    <p>There is no posts available</p>
+                                </div>
+                                <% } else { %>
+                                    <% for (let post of bookmarks) { %>
+                                        <div class="card col-sm-3 m-2">
+                                            <% if (post.thumbnail) { %>
+                                                <img src="<%= post.thumbnail %>" alt="<%= post.title %>"
+                                                    class="card-img-top mt-3">
+                                                <% } %>
+                                                    <div class="card-body p-0">
+                                                        <a href="/explorer/<%= post._id %>" class="text-dark card-link">
+                                                            <p class="my-2">
+                                                                <%= post.title %>
+                                                            </p>
+                                                        </a>
+                                                    </div>
+                                        </div>
+                                        <% } %>
+                                            <% } %>
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
         </div>
 
