navigation tweak and finishing touch

--- a/views/pages/dashboard/comments.ejs
+++ b/views/pages/dashboard/comments.ejs
@@ -28,9 +28,10 @@
                                                         <%= comment.user.username %>
                                                     </a>, <%= moment(comment.createdAt) %>
                                                 </p>
+                                                <hr>
 
-                                                <img src="<%= comment.user.profilePics %>"
-                                                    class="rounded-circle mx-3 mt-2" style="width: 40px;">
+                                                <img src="<%= comment.user.profilePics %>" class="rounded-circle mx-3"
+                                                    style="width: 40px;">
                                                 <div class="media-body">
 
                                                     <p class="mx-3 mt-2">
