--- a/views/pages/dashboard/edit-profile.ejs
+++ b/views/pages/dashboard/edit-profile.ejs
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-md-8 offset-md-2">
                         <div class="card card-body my-3">
-                            <h4 class="text-primary">
+                            <h4 class="text-primary mb-4">
                                 <%= title %>
                             </h4>
 
