--- a/views/pages/dashboard/post/editPost.ejs
+++ b/views/pages/dashboard/post/editPost.ejs
@@ -6,7 +6,7 @@
                 <%- include('../../../partials/sidebar.ejs') %>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-md-8 offset-md-1">
 
                 <div class="card card-body mx-5 my-3 mb-5">
                     <h4 class="text-primary">
