--- a/views/pages/dashboard/post/posts.ejs
+++ b/views/pages/dashboard/post/posts.ejs
@@ -6,7 +6,7 @@
                 <%- include('../../../partials/sidebar.ejs') %>
             </div>
 
-            <div class="col-md-10">
+            <div class="col-md-8 offset-md-1">
                 <div class="card card-body my-3">
                     <h5 class="text-primary">List Of All My Posts</h5>
 
